<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<org.mozilla.focus.widget.ResizableKeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mozac="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorUrlInputBackground"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:orientation="vertical">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quick_search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/input_container"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/quick_search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_margin_m7"
                android:background="@color/paletteLightGreyB100"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/paletteLightGreyA100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quick_search_recycler_view" />

            <View
                android:layout_width="16dp"
                android:layout_height="@dimen/common_margin_m7"
                android:layout_alignTop="@id/quick_search_container"
                android:layout_alignEnd="@id/quick_search_container"
                android:background="@drawable/overflow_mask"
                app:layout_constraintEnd_toEndOf="@id/quick_search_recycler_view"
                app:layout_constraintTop_toTopOf="@id/quick_search_recycler_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/awesomeBar"
            android:contentDescription="@string/content_description_dismiss_input" />

        <mozilla.components.browser.awesomebar.BrowserAwesomeBar
            android:id="@+id/awesomeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/search_suggestion_block"
            android:visibility="visible"
            mozac:awesomeBarChipBackgroundColor="@color/colorSuggestionBox"
            mozac:awesomeBarChipTextColor="@color/colorDownloadText"
            mozac:awesomeBarDescriptionTextColor="@color/paletteDarkGreyE100"
            mozac:awesomeBarTitleTextColor="@color/paletteWhite100" />

        <LinearLayout
            android:id="@+id/search_suggestion_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/quick_search_container"
            android:background="@color/paletteLightGreyB100"
            android:visibility="gone">

            <org.mozilla.focus.widget.FlowLayout
                android:id="@+id/search_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:animateLayoutChanges="true"
                tools:background="#55FF0000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_url_input_height"
            android:layout_alignParentBottom="true"
            android:background="@color/paletteLightGreyB100"
            android:orientation="horizontal"
            android:transitionName="urlbar">

            <org.mozilla.rocket.awesomebar.CompleteAwareInlineAutocompleteEditText
                android:id="@+id/url_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/urlbar_hint"
                android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
                android:inputType="textUri"
                android:lines="1"
                android:requiresFadingEdge="horizontal"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                app:autocompleteBackgroundColor="@color/colorAutocompleteHighlight" />

            <ImageButton
                android:id="@+id/clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_clear_input"
                android:src="@drawable/edit_close"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>

</org.mozilla.focus.widget.ResizableKeyboardLayout>